Actually factor in schema complexity and fix warnings